--- a/README
+++ b/README
@@ -51,5 +51,6 @@ After the program is done running, 3 CSV files will be outputted, with timestamp
 Hyperparameter definitions and descriptions of the output CSV files can be found in the “Hyperparameter and Metric Definitions.pdf” document.
 
 In order to edit which hyperparameters will be run, edit the hyperparameter lists found at the top of main.py.
+Please note that all lists need at least one valid value in them, or else the program will crash.
 
 In order to edit the speed at which the GUI moves, edit the SLEEP constant found in constants.py. A smaller number will result in faster movement.
